# azure-api-functionapp-poc

./: .funcignore  .gitignore  Makefile  README.md  host.json  pyproject.toml
azure_api_functionapp_poc/: config.py  entry.py  function.json  main.py
azure_api_functionapp_poc/api/: api.py  version.py
infra/: main.tf  provider.tf  variables.tf
tests/: test_azure_api_functionapp_poc.py
